<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0083CA"
    tools:context="com.cs385.alancampbell.news.quickLinks">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:text="@string/quickLinks1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
            // image button used as an onclick to a link

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/luasfinal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:text="@string/quickLinks2"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buslink"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/dublinbus" />



            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:text="@string/quickLinks3" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:onClick="raillink"
                app:srcCompat="@drawable/irishrail" />



            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:text="@string/quickLinks4" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buseireannlink"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/buseireean" />



            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:text="@string/quickLinks5" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="lynklink"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/lynx" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:text="@string/quickLinks6" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                app:srcCompat="@drawable/dublinia" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:text="@string/quickLinks7" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="zoolink"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/zoo" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
